testsuite/tests/th/T24557d.stderr

T24557d.hs:12:4: error: [GHC-11983]
    Invisible type pattern t is not allowed here
